(PC-37685)[PRO] fix: remove extra paddings for funnel + logged-out layouts

--- a/pro/src/app/App/layouts/logged-out/SignUpLayout/SignUpLayout.module.scss
+++ b/pro/src/app/App/layouts/logged-out/SignUpLayout/SignUpLayout.module.scss
@@ -171,10 +171,6 @@
   flex-direction: column;
   justify-content: space-between;
 
-  @media screen and (min-width: size.$tablet) {
-    padding: size.$main-content-padding size.$main-content-padding 0;
-  }
-
   .logo-sign-up {
     color: var(--color-text-brand-primary);
     max-width: rem.torem(135px);
